2001-04-17  Jochen Wiedmann  <joe@ispsoft.de> (0.1018)

	* Added LIMIT clause. HAMDOUNI El Bachir <bachir@hamdouni.org>

2001-02-17  Jochen Wiedmann  <joe@ispsoft.de> (0.1017)

	* Makefile.PL: Fixed portability issue with Darwin. Eric Peden
	  <ericpeden@homemail.com>

1999-08-29  Jochen Wiedmann  <joe@ispsoft.de> (0.1016)

	* lib/SQL/Statement.pm: Fixed a portability problem with Perl
	  5.004. (sort $coderef @list works with 5.005 only.) My thanks
	  to Paul J. Schinder <schinder@pobox.com> and Kevin Georgison
	  <georgkev@mbnet.mb.ca> for pointing me to this.

1999-08-23  Jochen Wiedmann  <joe@ispsoft.de>  (0.1015)

	* lib/SQL/Statement.pm (SELECT): Added support for DISTINCT.

1999-05-25  Jochen Wiedmann  <joe@ispsoft.de> (0.1014)

	* lib/SQL/Statement.pm (SELECT): Added the possibility to use
	  placeholders in the SELECT field list.

1999-04-04  Jochen Wiedmann  <joe@ispsoft.de> (0.1013)

	* sql_yacc.y: Added IS NOT NULL.

1999-04-04  Jochen Wiedmann  <joe@ispsoft.de> (0.1012)

	* Minor portability fixes.
	* $stmt->where() was working with SELECT only and not with
	  UPDATE and DELETE.

1999-03-03  Jochen Wiedmann  <joe@ispsoft.de> (0.1011)

	* lib/SQL/Statement.pm (SELECT): Added the ability to order by
	  columns that are not part of the selected data; Joel Meulenberg
	  <joelmeulenberg@yahoo.com>.
	* sql_data.c: Fixed a bug in LIKE and CLIKE; Joel Meulenberg
	  <joelmeulenberg@yahoo.com>.

1999-02-13  Jochen Wiedmann  <joe@ispsoft.de> (0.1010)

	* sql_yacc.y: Fixed a bug in the parser, that caused mixed
	  AND/OR conditions to fail. Thanks to Joel Meulenberg
	  <joelmeulenberg@yahoo.com>.

1998-10-26  Jochen Wiedmann  <joe@ispsoft.de> (0.1009)

	* lib/SQL/Statement.pm (SELECT): lockMode was set to 1, thus
	  write permissions have been required for a SELECT. Thanks
	  to Jason Burns <jason@3ws.com> for pointing this out.

1998-09-08  Jochen Wiedmann  <joe@ispsoft.de> (0.1008)

	* sql_yacc.y: Fixed typo in the lexer: ALL was returned instead of