@@ -1,3 +1,9 @@
+2001-04-25  Jochen Wiedmann  <joe@ispsoft.de> (0.1019)
+
+	* lib/SQL/Statement.pm: Changed distribution to include
+	  files generated by Solaris bison 1.27. Thanks to
+	  Jost Krieger <Jost.Krieger@ruhr-uni-bochum.de>
+
 2001-04-17  Jochen Wiedmann  <joe@ispsoft.de> (0.1018)
 
 	* Added LIMIT clause. HAMDOUNI El Bachir <bachir@hamdouni.org>
